<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/balance" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/discover" />
        <item
            android:id="@+id/nav_my_library"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_library" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/wish_list" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/settings" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/logout"
        />

</menu>
